--- a/public/style.css
+++ b/public/style.css
@@ -1,36 +1,120 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Kavoon;
 }
-body{
+
+body {
     width: 100vw;
     height: 100vh;
-   
 }
 
-
-.container{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    position: relative;
-    overflow: hidden;
-}
-/* img:nth-child(1){
-    position: absolute;
-    left: 0;
-}
-img{
+.blank_page {
     width: 100%;
     height: 100%;
-    position: absolute;
-    left: 100%;
-    transition: all ease-in-out 2s;
-} */
+    background-image: url("./../images/Leonardo_Diffusion_XL_background_image_foor_recipe_for_web_sit_1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+}
 
-.hero{
+.blank_page::after {
+    content: '';
     position: absolute;
-    width: 100px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    /* z-index: -1; */
+}
+
+.working_area{
+    z-index: 9;
+    width: 95%;
+    height: 100%;
+    margin: auto;
+    padding-top: 10px;
+}
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav h1 {
+    font-size: 40px;
+}
+
+.links a {
+    color: white;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+nav input {
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.319);
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    font-size: 25px;
+    font-weight: 900;
+    padding-left: 20px;
+    color: white;
+    text-shadow: 0 0 5px black;
+    letter-spacing: 2px;
+}
+
+main {
+    width: 90%;
+    height: 92%;
+    margin: auto;
+    /* background-color: red; */
+    display: flex;
+    margin-top: 20px;
+}
+
+.main_left {
+    /* background-color: green; */
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title h1 {
+    font-size: 200px;
+    font-family: Jacques Francois Shadow;
+}
+
+.main_right {
+    width: 30%;
+    /* background-color: blue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.main_right .btn {
+    width: 300px;
     height: 100px;
+    cursor: pointer;
+    font-size: 50px;
+    border-radius: 15px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 1s;
+}
+
+.btn a {
+    text-decoration: none;
+    color: black;
 }
